{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 20,
  "lineage": "8fe4840f-f4fa-f5aa-7581-d6f0959fa38a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184075527:vpc/vpc-039a588b00112c57b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fbfdb7d00995168d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06fe8fa75ab0ef953",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-039a588b00112c57b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d29f2560df3ff55",
            "owner_id": "590184075527"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4942b8fcc1f29d",
            "arn": "arn:aws:ec2:us-east-1:590184075527:instance/i-077f55dccc7c8dfc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077f55dccc7c8dfc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0717af436cd5807fd",
            "private_dns": "ip-172-31-81-163.ec2.internal",
            "private_ip": "172.31.81.163",
            "public_dns": "ec2-54-163-183-226.compute-1.amazonaws.com",
            "public_ip": "54.163.183.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0844fbcd69dc6e57a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-app-dev-instance-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a90df0850759a93b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abe5c60b3e4e8ccc"
            ]
          },
          "dependencies": [
            "aws_security_group.instances",
            "data.aws_ami.ubuntu-linux-2004"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4942b8fcc1f29d",
            "arn": "arn:aws:ec2:us-east-1:590184075527:instance/i-0e7a04975e1f2a7a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7a04975e1f2a7a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0096b03ae59138ac1",
            "private_dns": "ip-172-31-5-208.ec2.internal",
            "private_ip": "172.31.5.208",
            "public_dns": "ec2-44-195-91-26.compute-1.amazonaws.com",
            "public_ip": "44.195.91.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c574fd1a2d31b7d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-app-dev-instance-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c91dfb8666871d29",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abe5c60b3e4e8ccc"
            ]
          },
          "dependencies": [
            "aws_security_group.instances",
            "data.aws_ami.ubuntu-linux-2004"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:loadbalancer/app/web-app-dev-web-app-lb/9bb8b9364c1b636f",
            "arn_suffix": "app/web-app-dev-web-app-lb/9bb8b9364c1b636f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-dev-web-app-lb-1239170898.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:loadbalancer/app/web-app-dev-web-app-lb/9bb8b9364c1b636f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-dev-web-app-lb",
            "security_groups": [
              "sg-00562022d38ea107a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fa3e16f2fc912f2"
              },
              {
                "subnet_id": "subnet-07b2fcda6c1f1516a"
              },
              {
                "subnet_id": "subnet-0a90df0850759a93b"
              },
              {
                "subnet_id": "subnet-0c91dfb8666871d29"
              },
              {
                "subnet_id": "subnet-0f6361dd081e6e158"
              },
              {
                "subnet_id": "subnet-0f99513317eb34780"
              }
            ],
            "subnets": [
              "subnet-05fa3e16f2fc912f2",
              "subnet-07b2fcda6c1f1516a",
              "subnet-0a90df0850759a93b",
              "subnet-0c91dfb8666871d29",
              "subnet-0f6361dd081e6e158",
              "subnet-0f99513317eb34780"
            ],
            "vpc_id": "vpc-039a588b00112c57b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default_subnet",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:listener/app/web-app-dev-web-app-lb/9bb8b9364c1b636f/05fda464e4cfe6b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:listener/app/web-app-dev-web-app-lb/9bb8b9364c1b636f/05fda464e4cfe6b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:loadbalancer/app/web-app-dev-web-app-lb/9bb8b9364c1b636f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default_subnet",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:listener-rule/app/web-app-dev-web-app-lb/9bb8b9364c1b636f/05fda464e4cfe6b7/4fc3dbc91b3c0725",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:listener-rule/app/web-app-dev-web-app-lb/9bb8b9364c1b636f/05fda464e4cfe6b7/4fc3dbc91b3c0725",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:listener/app/web-app-dev-web-app-lb/9bb8b9364c1b636f/05fda464e4cfe6b7",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.http",
            "aws_lb_target_group.instances",
            "aws_security_group.alb",
            "data.aws_subnet_ids.default_subnet",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab",
            "arn_suffix": "targetgroup/web-app-dev-tg/bc9a0c7289457bab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-app-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-039a588b00112c57b"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab-20240823131051667000000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab",
            "target_id": "i-077f55dccc7c8dfc6"
          },
          "dependencies": [
            "aws_instance.instance_1",
            "aws_lb_target_group.instances",
            "aws_security_group.instances",
            "data.aws_ami.ubuntu-linux-2004",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab-20240823131051691000000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590184075527:targetgroup/web-app-dev-tg/bc9a0c7289457bab",
            "target_id": "i-0e7a04975e1f2a7a3"
          },
          "dependencies": [
            "aws_instance.instance_2",
            "aws_lb_target_group.instances",
            "aws_security_group.instances",
            "data.aws_ami.ubuntu-linux-2004",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184075527:security-group/sg-00562022d38ea107a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00562022d38ea107a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-app-dev-alb-security-group",
            "name_prefix": "",
            "owner_id": "590184075527",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039a588b00112c57b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184075527:security-group/sg-0abe5c60b3e4e8ccc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0abe5c60b3e4e8ccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "web-app-dev-instance-security-group",
            "name_prefix": "",
            "owner_id": "590184075527",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039a588b00112c57b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2372613677",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00562022d38ea107a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2034641006",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00562022d38ea107a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-4024875290",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0abe5c60b3e4e8ccc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instances"
          ]
        }
      ]
    }
  ]
}